[metadata]
name = retry
version = 3.0.0
url = https://github.com/AwesomeDog/retry
author = AwesomeDog
author_email = -
description = An easy to use, but functional decorator for retrying on exceptions.
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[bdist_wheel]
universal = 1

[options]
python_requires = >=3.7
